# jpy-tillo-sdk

./: .pre-commit-config.yaml  Makefile  README.md  name.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow.yml
examples/brand/: get_brands.py  get_template.py  list_templates.py
examples/brand/information/: get_brands.py
examples/brand/templates/: get_template.py  list_templates.py
examples/digital_card/: cancel_digital_code.py  cancel_digital_url.py  check_balance.py  check_digital_order_status.py  check_stock.py  issue_digital_code.py  order_digital_code.py  reverse_digital_code.py  top_up_digital_code.py
examples/floats/: check_floats.py  request_payment_transfer.py
examples/physical_card/: activate_physical_card.py  balance_check_physical.py  cancel_activate_physical_card.py  cancel_top_up_physical_card.py  cash_out_original_transaction.py  fulfil_order.py  order_physical_card.py  order_status.py  top_up_physical_card.py
jaddek_tillo_sdk/: enums.py  http_client.py  signature.py
jaddek_tillo_sdk/domain/brand/: factory.py
jaddek_tillo_sdk/domain/digital_card/: endpoints.py  models.py  services.py
jaddek_tillo_sdk/domain/float/: services.py
jaddek_tillo_sdk/domain/physical_card/: endpoints.py  models.py
src/jaddek_tillo_sdk/: errors.py
src/jaddek_tillo_sdk/domain/digital_card/: endpoints.py
src/jpy_tillo_sdk/: contracts.py  endpoint.py  enums.py  errors.py  http_client.py  http_client_factory.py  rate_limits.py  signature.py  tillo.py
tests/: conftest.py  test_http_client.py  test_signature.py
tests/domain/brand/: conftest.py  test_brand_endpoints.py  test_brand_factory.py  test_brand_services.py
tests/domain/digital_card/: conftest.py  test_digital_card_endpoints.py  test_digital_card_factory.py  test_digital_card_services.py
tests/domain/float/: conftest.py  test_float_endpoints.py  test_float_factory.py  test_float_services.py
tests/domain/physical_card/: test_physical_card_endpoints.py  test_physical_card_factory.py  test_physical_card_services.py
(+17 files in other folders)
