[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jpy-tillo-sdk"
version = "0.1.6"
description = "The package for developers to interact with the Tillo APIv2"
authors = [
    { name = "Anton Nazarov", email = "tonynazarov@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

license = "MIT"
dependencies = [
    "httpx[http2]>=0.28.1,<0.29.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.4",
]

[project.urls]
Homepage = "https://github.com/jaddek/jpy-tillo-sdk"
Issues = "https://github.com/jaddek/jpy-tillo-sdk/issues"


[tool.bumpversion]
allow_dirty = false
commit = true
tag = true
message = "Bump version: {current_version} → {new_version}"
pre_commit_hooks = ["uv sync", "uv run ruff check", "git add uv.lock"]
commit_args = ""

[tool.bumpversion.files]
filename = "VERSION"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]
